# makoview

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/makoview/: app.py  plots.py  styles.css  wrapper.py
