[project]
name = "mako-visualisation"
version = "0.1.0"
description = "Python Shiny app for MAKO visualisation"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "shiny>=0.10.0",
    "duckdb>=1.0.0",
    "pandas>=2.3.3",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "shinyswatch>=0.9.0",
]


[tool.uv]
dev-dependencies = []
package = true


[project.scripts]
makoview = "makoview.wrapper:main"